--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "LICENSE",
     "README.md"
   ],
-  "main": "lib/index",
+  "main": "lib/gitProperties.js",
+  "bin": {
+    "node-git-info": "bin/node-git-info"
+  },
   "devDependencies": {
     "chai": "3.5.0",
     "coveralls": "2.11.15",
@@ -16,7 +19,7 @@
     "mocha": "3.1.2",
     "sinon": "1.17.6",
     "sinon-chai": "2.8.0",
-    "utils-fs-read-properties": "^1.0.0"
+    "utils-fs-read-properties": "1.0.0"
   },
   "scripts": {
     "start": "node lib/gitProperties",
@@ -39,13 +42,8 @@
     "url": "git://github.com/rcruzper/node-git-info.git"
   },
   "keywords": [
-    "express",
-    "middleware",
-    "actuator",
-    "healthcheck",
-    "health",
-    "ping",
-    "metrics",
+    "git",
+    "properties",
     "info"
   ]
 }
