--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "LICENSE",
     "README.md"
   ],
-  "main": "lib/gitProperties.js",
+  "main": "index.js",
   "bin": {
     "node-git-info": "bin/node-git-info"
   },
