--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "3.10.2",
     "istanbul": "0.4.5",
     "mocha": "3.1.2",
+    "mock-fs": "^3.12.1",
     "sinon": "1.17.6",
     "sinon-chai": "2.8.0",
     "tmp": "0.0.31",
