--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "node-git-info": "bin/node-git-info"
   },
   "devDependencies": {
-    "app-root-dir": "^1.0.2",
+    "app-root-dir": "1.0.2",
     "chai": "3.5.0",
     "coveralls": "2.11.15",
     "eslint": "3.10.2",
     "istanbul": "0.4.5",
     "mocha": "3.1.2",
-    "mock-fs": "^3.12.1",
+    "mock-fs": "3.12.1",
     "sinon": "1.17.6",
     "sinon-chai": "2.8.0",
     "tmp": "0.0.31",
@@ -40,7 +40,7 @@
   "dependencies": {
     "bluebird": "3.4.6",
     "child-process-promise": "2.2.0",
-    "command-line-args": "^3.0.3",
+    "command-line-args": "3.0.3",
     "moment": "2.16.0"
   },
   "repository": {
